# adapter-schema

./: LICENSE  README.md  metaconfigurator_settings.json  pyproject.toml  tox.ini
.github/workflows/: release.yml  tests.yml
docs/: ReleaseGuide.md
export-formats/: issm-example.yaml  open-foam-example
preciceadapterschema/: __init__.py  precice_adapter_config.schema.json  validate.py
tests/: test_validate.py
tests/configs/: invalid_config.json  valid_config.json
