[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preciceadapterschema"
version = "0.1.0"
description = "Validation utility for preCICE adapter configurations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "preCICE developers", email = "info@precice.org"}
]
keywords = ["preCICE", "adapter", "validation", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.0.0",
    "importlib-resources>=5.0.0; python_version < '3.9'",
]

[project.urls]
Homepage = "https://github.com/precice/adapter-schema"
Repository = "https://github.com/precice/adapter-schema"

[tool.setuptools]
packages = ["preciceadapterschema"]

[tool.setuptools.package-data]
preciceadapterschema = ["*.json"]
