[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "precice-adapter-schema"
dynamic = [ "version" ]
description = "Validation utility for preCICE adapter configurations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "preCICE developers", email = "info@precice.org"}
]
maintainers = [
    { name = "Felix Neubauer", email = "felix.neubauer@ipvs.uni-stuttgart.de" }
]
license= "MIT"
license-files = [ "LICENSE" ]
keywords = ["preCICE", "adapter", "validation", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.0.0",
    "importlib-resources>=5.0.0; python_version < '3.9'",
]

[project.urls]
Homepage = "https://precice.org"
Documentation = "https://precice.org/community-guidelines-adapters"
Repository = "https://github.com/precice/adapter-schema.git"
"Bug Tracker" = "https://github.com/precice/adapter-schema/issues"

[tool.setuptools]
packages = ["preciceadapterschema"]

[tool.setuptools.package-data]
preciceadapterschema = ["*.json"]

[tool.setuptools-git-versioning]
enabled = true